--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@ body {
 }
 
 h1 {
-  color: rgb(0, 0, 0);
+  color: #2c2c2c;
   text-align: center;
   padding: 20px;
+}
+
+h5 {
+  color: #eeff00;
+  text-align: center;
+  padding: 10px 20px;
 }
 p {
   color: rgb(90, 51, 51);
@@ -20,25 +26,45 @@ p {
   font-size: 16px;
 }
 
-button:hover {
-  background-color: #9ab512;
+.Topcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #2c2c2c;
+  flex-wrap: wrap;
+  gap: 80px;
 }
-button {
-  background-color: #4caf50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 12px;
+
+.Midcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #0d2359;
+  flex-wrap: wrap;
+  gap: 600px;
+  margin-top: 100px;
 }
-img {
-  display: block;
-  margin: 20px auto;
-  max-width: 100%;
+
+.groundcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #0d2359;
+  flex-wrap: wrap;
+  gap: 600px;
+  margin-top: 100px;
+}
+
+#logo {
+  width: 50px;
   height: auto;
+}
+
+a {
+  color: #fff59d;
+  text-decoration: none;
+  font-size: 18px;
 }
